More upgrades to Java 11 API where applicable.